[gd_scene load_steps=3 format=3 uid="uid://bymf31ifew6l8"]

[ext_resource type="Script" path="res://scripts/fleet_picker.gd" id="1_mea80"]
[ext_resource type="Texture2D" uid="uid://b4b8ror8b47gu" path="res://assets/frigate.png" id="2_y03r5"]

[node name="FleetPicker" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mea80")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 640.0
color = Color(0.160784, 0.160784, 0.211765, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 75

[node name="NameContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PlayerLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/NameContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Player"
horizontal_alignment = 1

[node name="EnemyLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/NameContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Opps"
horizontal_alignment = 1

[node name="FleetContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="PlayerFleet" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer/FleetContainer"]
layout_mode = 2

[node name="PlayerSlot1" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/FleetContainer/PlayerFleet"]
custom_minimum_size = Vector2(50, 100)
layout_mode = 2
icon_alignment = 1
expand_icon = true

[node name="PlayerSlot2" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/FleetContainer/PlayerFleet"]
custom_minimum_size = Vector2(50, 100)
layout_mode = 2
icon_alignment = 1
expand_icon = true

[node name="PlayerSlot3" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/FleetContainer/PlayerFleet"]
custom_minimum_size = Vector2(50, 100)
layout_mode = 2
icon_alignment = 1
expand_icon = true

[node name="PlayerSlot4" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/FleetContainer/PlayerFleet"]
custom_minimum_size = Vector2(50, 100)
layout_mode = 2
icon_alignment = 1
expand_icon = true

[node name="PlayerSlot5" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/FleetContainer/PlayerFleet"]
custom_minimum_size = Vector2(50, 100)
layout_mode = 2
icon_alignment = 1
expand_icon = true

[node name="EnemyFleet" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer/FleetContainer"]
layout_mode = 2

[node name="EnemySlot1" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/FleetContainer/EnemyFleet"]
custom_minimum_size = Vector2(50, 100)
layout_mode = 2
icon_alignment = 1
expand_icon = true

[node name="EnemySlot2" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/FleetContainer/EnemyFleet"]
custom_minimum_size = Vector2(50, 100)
layout_mode = 2
icon_alignment = 1
expand_icon = true

[node name="EnemySlot3" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/FleetContainer/EnemyFleet"]
custom_minimum_size = Vector2(50, 100)
layout_mode = 2
icon_alignment = 1
expand_icon = true

[node name="EnemySlot4" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/FleetContainer/EnemyFleet"]
custom_minimum_size = Vector2(50, 100)
layout_mode = 2
icon_alignment = 1
expand_icon = true

[node name="EnemySlot5" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/FleetContainer/EnemyFleet"]
custom_minimum_size = Vector2(50, 100)
layout_mode = 2
icon_alignment = 1
expand_icon = true

[node name="ShipCardContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="PlayerShipList" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer/ShipCardContainer"]
layout_mode = 2

[node name="PlayerFrigateButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/ShipCardContainer/PlayerShipList"]
custom_minimum_size = Vector2(50, 100)
layout_mode = 2
icon = ExtResource("2_y03r5")
icon_alignment = 1
expand_icon = true

[node name="PlayerFrigateButton2" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/ShipCardContainer/PlayerShipList"]
custom_minimum_size = Vector2(50, 100)
layout_mode = 2
icon = ExtResource("2_y03r5")
icon_alignment = 1
expand_icon = true

[node name="PlayerFrigateButton3" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/ShipCardContainer/PlayerShipList"]
custom_minimum_size = Vector2(50, 100)
layout_mode = 2
icon = ExtResource("2_y03r5")
icon_alignment = 1
expand_icon = true

[node name="PlayerFrigateButton4" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/ShipCardContainer/PlayerShipList"]
custom_minimum_size = Vector2(50, 100)
layout_mode = 2
icon = ExtResource("2_y03r5")
icon_alignment = 1
expand_icon = true

[node name="PlayerFrigateButton5" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/ShipCardContainer/PlayerShipList"]
custom_minimum_size = Vector2(50, 100)
layout_mode = 2
icon = ExtResource("2_y03r5")
icon_alignment = 1
expand_icon = true

[node name="EnemyShipList" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer/ShipCardContainer"]
layout_mode = 2

[node name="EnemyFrigateButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/ShipCardContainer/EnemyShipList"]
custom_minimum_size = Vector2(50, 100)
layout_mode = 2
icon = ExtResource("2_y03r5")
icon_alignment = 1
expand_icon = true

[node name="EnemyFrigateButton2" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/ShipCardContainer/EnemyShipList"]
custom_minimum_size = Vector2(50, 100)
layout_mode = 2
icon = ExtResource("2_y03r5")
icon_alignment = 1
expand_icon = true

[node name="EnemyFrigateButton3" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/ShipCardContainer/EnemyShipList"]
custom_minimum_size = Vector2(50, 100)
layout_mode = 2
icon = ExtResource("2_y03r5")
icon_alignment = 1
expand_icon = true

[node name="EnemyFrigateButton4" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/ShipCardContainer/EnemyShipList"]
custom_minimum_size = Vector2(50, 100)
layout_mode = 2
icon = ExtResource("2_y03r5")
icon_alignment = 1
expand_icon = true

[node name="EnemyFrigateButton5" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/ShipCardContainer/EnemyShipList"]
custom_minimum_size = Vector2(50, 100)
layout_mode = 2
icon = ExtResource("2_y03r5")
icon_alignment = 1
expand_icon = true

[node name="ButtonContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "<--"

[node name="StartButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "-->"

[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/FleetContainer/PlayerFleet/PlayerSlot1" to="." method="_on_player_slot_1_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/FleetContainer/PlayerFleet/PlayerSlot2" to="." method="_on_player_slot_2_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/FleetContainer/PlayerFleet/PlayerSlot3" to="." method="_on_player_slot_3_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/FleetContainer/PlayerFleet/PlayerSlot4" to="." method="_on_player_slot_4_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/FleetContainer/PlayerFleet/PlayerSlot5" to="." method="_on_player_slot_5_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/FleetContainer/EnemyFleet/EnemySlot1" to="." method="_on_enemy_slot_1_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/FleetContainer/EnemyFleet/EnemySlot2" to="." method="_on_enemy_slot_2_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/FleetContainer/EnemyFleet/EnemySlot3" to="." method="_on_enemy_slot_3_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/FleetContainer/EnemyFleet/EnemySlot4" to="." method="_on_enemy_slot_4_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/FleetContainer/EnemyFleet/EnemySlot5" to="." method="_on_enemy_slot_5_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/ShipCardContainer/PlayerShipList/PlayerFrigateButton" to="." method="_on_player_frigate_button_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/ShipCardContainer/PlayerShipList/PlayerFrigateButton2" to="." method="_on_player_frigate_button_2_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/ShipCardContainer/PlayerShipList/PlayerFrigateButton3" to="." method="_on_player_frigate_button_3_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/ShipCardContainer/PlayerShipList/PlayerFrigateButton4" to="." method="_on_player_frigate_button_4_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/ShipCardContainer/PlayerShipList/PlayerFrigateButton5" to="." method="_on_player_frigate_button_5_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/ShipCardContainer/EnemyShipList/EnemyFrigateButton" to="." method="_on_enemy_frigate_button_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/ShipCardContainer/EnemyShipList/EnemyFrigateButton2" to="." method="_on_enemy_frigate_button_2_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/ShipCardContainer/EnemyShipList/EnemyFrigateButton3" to="." method="_on_enemy_frigate_button_3_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/ShipCardContainer/EnemyShipList/EnemyFrigateButton4" to="." method="_on_enemy_frigate_button_4_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/ShipCardContainer/EnemyShipList/EnemyFrigateButton5" to="." method="_on_enemy_frigate_button_5_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/ButtonContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/ButtonContainer/StartButton" to="." method="_on_start_button_pressed"]
